--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="weather">
-            <div class="weather1">17°</div>
+            <div class="weather1">17°C</div>
             <div class="weather2">
                 <p>Location</p>
                 <span>11:00 pm - Monday 2024-02-07</span>
@@ -18,6 +18,12 @@
                 <p><img src="" alt="condition"></p>
                 <span>condition</span>
             </div>
+            <div class="weather4">89
+                <!-- <span>humidity</span> -->
+            </div>
+            <div class="weather5">75</div>
+            <!-- <button onclick="generateRandomNumber()">pH value</button> -->
+            <button id="randomButton">pH value</button>
         </div>
     </div>
 </body>
